@@ -58,6 +58,7 @@ debian-installer (2011xxxx) UNRELEASED; urgency=low
     subarchitectures in standard-udebs.
   * Document move of /dev/.udev/firmware-missing to
     /run/udev/firmware-missing in hw-detect 1.87.
+  * Handle udebs installing libraries into /usr/lib/$(DEB_HOST_MULTIARCH).
 
   [ Joey Hess ]
   * Work around binutils breakage (#623710) that broke mklibs,
